--- a/angular.json
+++ b/angular.json
@@ -17,8 +17,19 @@
                         "tsConfig": "src/tsconfig.app.json",
                         "polyfills": "src/polyfills.ts",
                         "assets": ["src/assets", "src/favicon.ico"],
-                        "styles": ["node_modules/font-awesome/css/font-awesome.css", "src/styles/app.scss"],
-                        "scripts": ["node_modules/chart.js/dist/Chart.js"],
+                        "styles": [
+                            "node_modules/font-awesome/css/font-awesome.css", 
+                            "node_modules/primeicons/primeicons.css",
+                            "node_modules/primeng/resources/themes/nova-light/theme.css",
+                            "node_modules/primeng/resources/primeng.min.css",
+                            "node_modules/alertifyjs/build/css/alertify.css",
+                            "node_modules/alertifyjs/build/css/themes/default.css",
+                            "src/styles/app.scss"
+                        ],
+                        "scripts": [
+                            "node_modules/chart.js/dist/Chart.js",
+                            "node_modules/alertifyjs/build/alertify.js"
+                        ],
                         "allowedCommonJsDependencies": ["chart.js"]
                     },
                     "configurations": {
@@ -72,7 +83,10 @@
                         "tsConfig": "src/tsconfig.spec.json",
                         "karmaConfig": "src/karma.conf.js",
                         "scripts": ["node_modules/chart.js/dist/Chart.js"],
-                        "styles": ["node_modules/font-awesome/css/font-awesome.css", "src/styles/app.scss"],
+                        "styles": [
+                            "node_modules/font-awesome/css/font-awesome.css",
+                            "src/styles/app.scss"
+                        ],
                         "assets": ["src/assets", "src/favicon.ico"]
                     }
                 },
