--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "11.2.9",
+    "@angular/cdk": "^12.0.1",
     "@angular/common": "11.2.9",
     "@angular/compiler": "11.2.9",
     "@angular/core": "11.2.9",
@@ -26,12 +27,16 @@
     "@ng-bootstrap/ng-bootstrap": "7.0.0",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
+    "alertifyjs": "^1.13.1",
     "chart.js": "2.9.4",
     "core-js": "3.6.5",
     "font-awesome": "4.7.0",
     "ng2-charts": "2.4.2",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-spinner": "^11.0.1",
     "oidc-client": "^1.9.1",
+    "primeicons": "^2.0.0",
+    "primeng": "^9.0.5",
     "rxjs": "6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
