--- a/angular.json
+++ b/angular.json
@@ -24,11 +24,15 @@
                             "node_modules/primeng/resources/primeng.min.css",
                             "node_modules/alertifyjs/build/css/alertify.css",
                             "node_modules/alertifyjs/build/css/themes/default.css",
+                            "node_modules/quill/dist/quill.core.css", 
+                            "node_modules/quill/dist/quill.snow.css",
                             "src/styles/app.scss"
                         ],
                         "scripts": [
                             "node_modules/chart.js/dist/Chart.js",
-                            "node_modules/alertifyjs/build/alertify.js"
+                            "node_modules/alertifyjs/build/alertify.js",
+                            "node_modules/alertifyjs/build/alertify.js",
+                            "node_modules/quill/dist/quill.js"
                         ],
                         "allowedCommonJsDependencies": ["chart.js"]
                     },
