--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "oidc-client": "^1.9.1",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.5",
+    "quill": "^1.3.7",
     "rxjs": "6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
